--- a/CSS/style.css
+++ b/CSS/style.css
@@ -54,59 +54,60 @@
 
 
 
-html,
+/* html, */
 body {
   padding: 0;
   margin: 0;
-}
-body {
-  overflow-x: hidden;
-  height: 1000vw;
+  overflow-y: hidden;
 }
 
-#helper {
+
+
+
+
+
+
+
+
+/* About Me Button */
+.AboutMeButton{
+  cursor: pointer;
+  width: 8%;
+  height: 6%;
   position: absolute;
-  top: 50vw;
-  left: 0;
-  background-color: aqua;
+  top: 83%;
+  left: 50%;
+  transform: translate(-50%,-50%) rotate(-7deg);
+  z-index: 15;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50px 50px 50px 50px;
+  animation: AboutMeButton_bounce 2s infinite;
+  -webkit-animation: AboutMeButton_bounce 2s infinite;
+  -moz-animation: AboutMeButton_bounce 2s infinite;
+  -o-animation: AboutMeButton_bounce 2s infinite;
 }
-
-#main-Horizontal-container {
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  white-space: nowrap;
-  font-size: 0;
-}
-#main-Horizontal-container > * {
-  font-size: 1rem;
-}
-
-#intro {
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  background: #fff;
+ 
+@-webkit-keyframes AboutMeButton_bounce {
+  0%, 20%, 50%, 80%, 100% {-webkit-transform: translate(-50%,-50%) rotate(-7deg);}	
+  40% {-webkit-transform: translate(-50%,-30%) rotate(-7deg);}
+  60% {-webkit-transform: translate(-50%,-45%) rotate(-7deg);}
 }
 
 
-
-
-
-
-
-
-
-
-
+.AboutMeButtonSpan{
+  font-family: "Domaine Sans Display";
+  font-size: 1em; 
+  letter-spacing: 0.1em;
+  text-align: center;
+  color: #fff;
+  margin-top: 10%;
+}
 
 
 
 /* SideNav */
-.sidenav {
+.myMainMenuSidenav {
   height: 100%;
   width: 10vh;
   position: fixed;
@@ -117,28 +118,27 @@ body {
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  border-right: 3px solid #FFFFFF;
+  border-right: 1px solid #FFFFFF;
   border-radius: 0px 0px 0px 0px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.726);
 }
 
-
-:root {
-  --blue-bubble: #bbe6f3;
-  --small-b-bubble: #bae5f2;
-  --pink-bubble: #ebc7e5;
-  --font-color: #063064;
-}
 .AboutMe-container,
 .AboutMe-container-Inside{
   background-color: #272727;
   object-fit: scale-down;
-  max-width: 1280px;
-  width: 100%;
-  height: 650px;
-  margin: 60px auto;
-  position: relative;
+  /* max-width: 1280px; */
+  width: 90%;
+  height: 90%;
+  /* margin: 60px; */
+  position: absolute;
   overflow: hidden;
   border-radius: 6px;
+
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   -webkit-box-shadow: 1px 2px 29px 2px rgba(220, 244, 250, 1);
   -moz-box-shadow: 1px 2px 29px 2px rgba(220, 244, 250, 1);
   box-shadow: 1px 2px 29px 2px rgba(220, 244, 250, 1);
@@ -226,7 +226,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 150%;
+  height: 100%;
   transform: translate(-50%,-50%);
 }
 
@@ -336,7 +336,7 @@ body {
     @keyframes Portfolio-Header {
       to {
         background-position: 200% center;
-    }}
+  }}
 
 
 
@@ -381,3 +381,89 @@ body {
     }
     
 
+
+
+    
+@media screen and (max-width: 1000px){
+   
+}
+
+@media screen and (max-width: 767px){
+
+  .linear-Portfolio-Header {
+    font-size: 4em; 
+    font-weight: 50px;
+    letter-spacing: 0;
+    padding: 0 1em 0 1em;
+  }
+  
+  
+  .linear-Portfolio-handWrite {
+    font-size: 3.4em; 
+    padding-bottom: 15px;
+  }
+
+  .Header-Font-fixed{
+    font-size: 1.6em;
+  }
+
+  .Header-Font{
+    font-size: 1.6em;
+  }
+
+  .Header-container{
+    left: 23%;
+  }
+
+  /* About Me Button */
+  .AboutMeButton{
+    width: max-content;
+    height: max-content;
+    padding: 1px 10px 1px 10px;
+  }
+/* 
+  #AboutMe-MainClip,
+  #AboutMe-MainClip-Inside{
+    position: absolute;
+    width: 50vh;
+    height: 100%;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    background-color: violet;
+    overflow: hidden;
+  }
+
+  .AboutMe-MainIMG,
+  .AboutMe-MainIMG-Inside{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    transform: translate(-50%,-50%);
+  } */
+
+  .AboutMe_MainBackGround{
+    height: 100%;
+    width: auto;
+  }
+  /* Text1 */
+  .AboutMe-Text3-Box,
+  .AboutMe-Text2-Box,
+  .AboutMe-Text1-Box{
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .AboutMe-Text2,
+  .AboutMe-Text1{
+    font-size: 2.6em; 
+  }
+  .AboutMe-Text3{
+    font-size: 1.5em; 
+  }
+  .AboutMe-Text1-deatil1{
+    font-size: 0.5em; 
+    left: 40%;
+  }
+}
