--- a/CSS/MyWork.css
+++ b/CSS/MyWork.css
@@ -194,7 +194,7 @@
 
 
 .slideshow-item-text h1{
-    font-size: 1rem;
+    font-size: 1em;
     font-family: 'AvenirNextLTPro-Bold';
     text-align: center;
     letter-spacing: 1px;
