--- a/CSS/style.css
+++ b/CSS/style.css
@@ -217,7 +217,7 @@ body {
   left: 50%;
   top:50%;
   transform: translate(-50%,-50%);
-  background-color: violet;
+  background-color: #272727;
   overflow: hidden;
 }
 
