--- a/CSS/MyWork.css
+++ b/CSS/MyWork.css
@@ -210,7 +210,8 @@
 
 
 .slideshow-item-text p{
-    font-size: 1.6rem;
+    /* font-size: 1.6rem; */
+    font-size: calc(1vw - 5%);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 1px;
     font-weight: 300;
