--- a/CSS/MyWork.css
+++ b/CSS/MyWork.css
@@ -211,7 +211,8 @@
 
 .slideshow-item-text p{
     /* font-size: 1.6rem; */
-    font-size: 1vw; */
+    font-size: 1vw;
+    /* font-size: calc(1vw - 1); */
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 1px;
     font-weight: 300;
@@ -238,7 +239,7 @@
     }
 
     .slideshow-item-text p{
-        font-size: 1.2px;
+        font-size: 1vw;
     }
 
     .slideshow-item-text h1{
@@ -283,7 +284,7 @@
     }
 
     .slideshow-item-text p{
-        font-size: 1px;
+        font-size: 1vw;
         padding-top: 0.8rem;
     }
 
