--- a/CSS/style.css
+++ b/CSS/style.css
@@ -149,6 +149,7 @@ body {
   width: 100%;
   top: 50%;
   left: 50%;
+  background-color: #272727;
   transform: translate(-50%,-50%);
 }
 /* TEXT 01 */
