--- a/CSS/MyWork.css
+++ b/CSS/MyWork.css
@@ -211,9 +211,10 @@
 
 .slideshow-item-text p{
     /* font-size: 1.6rem; */
-    font-size: 1.6rem;
+    font-size: 2rem;
+    font-family: 'Sarabun';
+    text-transform: uppercase;
     /* font-size: calc(1vw - 1); */
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 1px;
     font-weight: 300;
     padding-top: 0.5rem;
@@ -238,9 +239,9 @@
         font-size: 3rem;
     }
 
-    .slideshow-item-text p{
-        font-size: 4px;
-    }
+    /* .slideshow-item-text p{
+        font-size: 1.6rem;
+    } */
 
     .slideshow-item-text h1{
         font-size: 0.5rem;
@@ -283,10 +284,10 @@
         margin-top: 0.2px;
     }
 
-    .slideshow-item-text p{
-        font-size: 4px;
+    /* .slideshow-item-text p{
+        font-size: 1.2rem;
         padding-top: 0.8rem;
-    }
+    } */
 
     .slideshow-item-text h1{
         font-size: 1.5px;
