--- a/CSS/MyWork.css
+++ b/CSS/MyWork.css
@@ -101,6 +101,12 @@
 
 
 
+  .Works-Container-Section{
+    position: relative; 
+    width: 100%; 
+    height: 35vh; 
+    background-color: #272727;
+  }
 
   .Works-Container-TimeLine-text{
     /* background-color: rgb(119, 156, 255); */
@@ -244,13 +250,25 @@
     } */
 
     .slideshow-item-text h1{
-        font-size: 0.5rem;
+        font-size: 1rem;
         margin: 0 0.5rem 0 0;
         padding: 0.9em 1.3em 0.9em 1.3em;
     }
 
     .slideshow-item img{ 
       padding: 1rem;
+    }
+
+    .Works-Container-Header-text h5{
+      font-family: 'Herbert-regular';
+      font-size: 5em; 
+    }
+    .Works-Container-Section{
+      height: 30vh; 
+    }
+
+    .Works-Container-Myworks-Section{
+      height: 45vh; 
     }
 
 
@@ -290,7 +308,7 @@
     } */
 
     .slideshow-item-text h1{
-        font-size: 1.5px;
+        font-size: 1rem;
         margin: 0 0.5rem 0 0;
         padding: 0.4rem 0.3rem 0.4rem 0.3rem;
         transform: translateY(-25%);
@@ -298,6 +316,17 @@
 
     .slideshow-item img{ 
       padding: 0;
+    }
+
+    .Works-Container-Header-text h5{
+      font-family: 'Herbert-regular';
+      font-size: 2em; 
+    }
+    .Works-Container-Section{
+      height: 20vh; 
+    }
+    .Works-Container-Myworks-Section{
+      height: 35vh; 
     }
 }
 
