--- a/CSS/MyProfile.css
+++ b/CSS/MyProfile.css
@@ -489,7 +489,9 @@
 
 
   @media screen and (max-width: 1000px){
-   
+    .SkillsText{
+      font-size: 0.9rem; 
+    }
   }
   
   @media screen and (max-width: 767px){
