--- a/CSS/MyCer.css
+++ b/CSS/MyCer.css
@@ -135,6 +135,7 @@
   letter-spacing: 1px;
   font-weight: bold;
   text-align: center;
+  line-height: 1.6;
   /* margin: 1.3rem; */
   padding: 0px;
   color: white;
